@@ -385,6 +385,9 @@ Tests
 Build
 -----
 
+- Issue #26624: Adds validation of ucrtbase[d].dll version with warning
+  for old versions.
+
 - Issue #17603: Avoid error about nonexistant fileblocks.o file by using a
   lower-level check for st_blocks in struct stat.
 
